<resources>
    <string name="app_name">MyFilms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_name">MovieName</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorite">Добавить в избранные</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Авторизация</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="tag_white">white</string>
    <string name="tag_yellow">yellow</string>
    <string name="launch_trailer">Запустить трейлер</string>
    <string name="guest">гость</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Log out</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_from_login">Выйти из логина?</string>
    <string name="yes">Да</string>
    <string name="No">Нет</string>
    <string name="wrong_id">Wrong id</string>
    <string name="error">Error</string>
    <string name="exit_app">Выйти?</string>
    <string name="add_data">Введите данные</string>
    <string name="wrong_data">Неверные данные</string>
    <string name="no_enternet_connection">Нет подключения к интернету</string>
    <string name="cannot_dawnload_favourite">Can\'t download Favourites</string>
    <string name="favourites_fragment_is_null">FavoritesFragment is null</string>
    <string name="fragment_login_binding_is_null">FragmentLoginBinding is null</string>
    <string name="fragment_films_binding_is_null">FragmentFilmsBinding is null</string>
    <string name="map">карта</string>
</resources>