<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_one">

    <item
        android:id="@+id/movies_nav"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/favorites_nav"
        android:icon="@drawable/ic_menu"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/settings_nav"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/about"/>

    <item
        android:id="@+id/login_nav"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit"/>

    </group>

    <item android:title="@string/communicate">
        <menu >


            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"/>

        </menu>
    </item>

</menu>